<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_label">Music Lessons</string>
    <string name="export_students">Export Students</string>
    <string name="save_student">Save Student</string>
    <string name="edit_student">Edit Student</string>
    <string name="add_student">Add Student</string>
    <string name="student_details">Student Details</string>
    <string name="delete_student">Delete Student</string>
    <string name="add_lesson">Add Lesson</string>
    <string name="save_lesson">Save Lesson</string>
    <string name="lesson_details">Lesson Details</string>
    <string name="edit_lesson">Edit Lesson</string>
    <string name="delete_lesson">Delete Lesson</string>
    <string name="name_error">Name is required</string>
    <string name="phone_number_error">Phone number can not be empty</string>
    <string name="music_note">Music Note</string>
    <string name="sms">SMS</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="email">Email</string>
    <string name="notes">Notes</string>
    <string name="colon">:</string>
    <string name="to">to</string>
    <string name="phone_number">Phone Number</string>
    <string name="delete">Delete</string>
    <string name="students_label">Students</string>
    <string name="dash">" - "</string>
    <string name="space">" "</string>
    <string name="add_fab">add_fab</string>
    <string name="edit_fab">edit_fab</string>
    <string-array name="section_titles">
        <item>
            Monday
        </item>
        <item>
            Tuesday
        </item>
        <item>
            Wednesday
        </item>
        <item>
            Thursday
        </item>
        <item>
            Friday
        </item>
        <item>
            Saturday
        </item>
        <item>
            Students
        </item>
    </string-array>
    <string-array name="weekdays">
        <item>
            Monday
        </item>
        <item>
            Tuesday
        </item>
        <item>
            Wednesday
        </item>
        <item>
            Thursday
        </item>
        <item>
            Friday
        </item>
        <item>
            Saturday
        </item>
    </string-array>
    <string-array name="phone_types">
        <item>
            Home
        </item>
        <item>
            Cell
        </item>
        <item>
            Work
        </item>
        <item>
            Other
        </item>
    </string-array>
    <!-- intent keys -->
    <string name="added_student_id">ADDED_STUDENT_ID</string>
    <string name="updated_student_id">UPDATED_STUDENT_ID</string>
    <string name="deleted_student_id">DELETED_STUDENT_ID</string>
    <string name="exported_students">EXPORTED_STUDENTS</string>
</resources>
