<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/app_bar_elevation"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/ToolbarTitle" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_padding_left_right">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:autofillHints="	AUTOFILL_HINT_PERSON_NAME_GIVEN"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/first_name"
                android:inputType="textCapWords"
                android:maxLength="24"
                android:singleLine="true"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_name"
                android:autofillHints="AUTOFILL_HINT_PERSON_NAME_FAMILY"
                android:hint="@string/last_name"
                android:inputType="textCapWords"
                android:maxLength="24"
                android:paddingLeft="44dp"
                android:singleLine="true"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_phone_number"
                android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="128"
                android:singleLine="true"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_alignParentBottom="true"
                android:autofillHints="no"
                android:drawableLeft="@drawable/ic_message_black_24dp"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/notes"
                android:inputType="textMultiLine"
                android:maxLength="128"
                android:textSize="@dimen/text_size" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/phone_numbers_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/last_name"
                android:scrollbars="vertical" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_numbers_list"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/text_size"
                android:contentDescription="@string/add_fab"
                android:src="@drawable/ic_phone_plus_black_24dp"
                app:elevation="@dimen/fab_elevation"
                app:fabSize="mini"
                app:rippleColor="@color/ripple_color" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
